2009-02-12  Michael Natterer  <mitch@gimp.org>

	Bug 567840 – GIMP's GtkScaleButton conflicts with GTK's

	* app/widgets/gtkscalebutton.c: rename the type to
	"GimpGtkScaleButton" so we don't crash if the real
	GtkScaleButton type is registered too.

2009-02-11  Sven Neumann  <sven@gimp.org>

	* app/core/gimpcoords-interpolate.c
	(gimp_coords_interpolate_catmull): applied patch from Alexia Death
	that fixes a bug that was introduced by the last commit.

2009-02-10  Sven Neumann  <sven@gimp.org>

	* app/core/gimpcoords-interpolate.c
	* app/core/gimpbrush-transform.c
	* app/paint/gimppaintoptions.c
	* app/display/gimpdisplayshell-coords.c: applied patch from Alexia
	Death that fixes the direction of brush rotation (bug #520078).

2009-02-10  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-coords.c
	(gimp_display_shell_eval_event): applied patch from Alexia Death
	that introduces smoothing for the stroke direction (bug #520078).

2009-02-09  Sven Neumann  <sven@gimp.org>

	* app/actions/tools-commands.c (tools_paint_brush_angle_cmd_callback):
	applied patch from Alexia Death that changes the steppings of the
	newly introduced brush rotation actions as suggested in bug #520078.

2009-02-09  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpgegltool.c (gimp_gegl_tool_dialog): seems
	pointless to include the GIMP-specific GEGL operations as they
	can't be reasonably controlled by the generic GEGL tool user
	interface.

2009-02-09  Michael Natterer  <mitch@gimp.org>

	Bug 569470 – pls, introduce an option 'how many latest presets for
	color curves should be saved'

	* app/config/gimprc-blurbs.h
	* app/config/gimpguiconfig.[ch]: add integer property
	"image-map-tool-max-recent" which defaults to ten. Adding a GUI
	for this IMO needs discussion, the value of ten seems appropriate.

	* app/widgets/gimpsettingsbox.[ch]
	(gimp_settings_box_add_current): add "gint max_recent" parameter
	and limit the number of recent settings to this number.
