@@ -29,10 +29,11 @@ INCLUDES = \
 	-I$(includedir)
 
 LDADD = \
-	$(libgimp)	\
-	$(libgimpcolor)	\
-	$(libgimpbase)	\
-	$(libgimpmath)	\
-	$(GLIB_LIBS)	\
-	$(RT_LIBS)	\
+	$(libgimp)		\
+	$(libgimpconfig)	\
+	$(libgimpcolor)		\
+	$(libgimpbase)		\
+	$(libgimpmath)		\
+	$(GLIB_LIBS)		\
+	$(RT_LIBS)		\
 	$(INTLLIBS)
